  * t/tests/changelog-file-strange-date/*:
    + [BR] Create a test with error syntax in changelog date.
      Run only with dpkg below 1.18.2.  (Closes: #794674).
  * t/tests/binaries-general/*:
    + [BR] Fix a test suite failure with gcc5 by using compat 9, and
      removing gets() that does not exist with C11 (used by default
      by gcc5).  (Closes: #794505).

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Aug 2015 23:27:48 +0200

lintian (2.5.34) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - unstripped-static-library

  * checks/binaries.{desc,pm}:
    + [NT] Apply patch from Guillem Jover to improve the tag
      description of the LFS tag.  (Closes: #792167)
    + [NT] Detect unstripped static libraries (as an
      experimental tag).
  * checks/cruft.pm:
    + [NT] Avoid svn-conflict-file tag for ".r0" files, since
      there cannot be a conflict involving revision 0.
      Thanks to Andreas Beckmann for the report.
      (Closes: #793068)
    + [BR] Detect pdf, ps, and eps lenna file.
  * checks/files.{desc,pm}:
    + [BR] Fix detection of sources.list file.  (Closes: #792237)
  * checks/systemd.pm:
    + [NT] Apply patches from Felipe Sateler to ignore known
      masked init.d scripts.  (Closes: #792501)

  * commands/info -> info.pm:
    + [NT] Renamed info to info.pm to remove some boilerplate
      code.
    + [NT] Forbid late --user-dirs and --include-dir options.

  * frontend/lintian:
    + [NT] Forbid late --user-dirs and --include-dir options.
    + [NT] Remove the following obsolete command line
      options: --root, --all, --binary, --source, --udeb.
      They are no longer useful.

  * lib/Lintian/Collect{,/*}.pm:
    + [NT] Add a shared memory cache that can be used to
      reduce memory consumption a bit for sharable objects.
      (Closes: #715035)
  * lib/Lintian/Data.pm:
    + [NT] Remove references to LINTIAN_ROOT as Lintian::Data
      no longer uses it.
  * lib/Lintian/Path.pm: