@@ -64,8 +64,10 @@ lintian (2.5.35) unstable; urgency=medium
     + [BR] Fix a test suite failure with gcc5 by using compat 9, and
       removing gets() that does not exist with C11 (used by default
       by gcc5).  (Closes: #794505).
+  * t/tests/legacy-binary/debian/debian/rules:
+    + [BR] Improve clean rule, thanks to Jakub Wilk.
 
- -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 03 Aug 2015 23:27:48 +0200
+ -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Thu, 06 Aug 2015 10:50:49 +0200
 
 lintian (2.5.34) unstable; urgency=medium
 
